# BasicC2

./: CMakeLists.txt
include/: Bot.hpp  TCPListener.hpp  bot.hpp
src/: Bot.cpp  TCPListener.cpp  bot.cpp  main.cpp
